<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#57E2EB"
    tools:context=".MainActivity">

    <View
        android:id="@+id/TopBar_MakeHabit"
        android:layout_width="413dp"
        android:layout_height="145dp"
        android:background="#2D6539"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="314dp"
        android:layout_height="470dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="156dp"
        android:background="#4FE7EB2B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TopBar_MakeHabit" />

    <TextView
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Desc"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="72dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Time"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <TextView
        android:id="@+id/Duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Duration"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/Time" />

    <TextView
        android:id="@+id/Day_Select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Select_Day"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/Duration" />

    <TextView
        android:id="@+id/Make_Habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="84dp"
        android:text="@string/MAKE_HABIT"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/TopBar_MakeHabit"
        app:layout_constraintTop_toTopOf="@+id/TopBar_MakeHabit" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="210dp"
        android:layout_height="61dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/group_1add_habit_maker"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/habitNameInput"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:hint="@string/Habit1"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.085" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="84dp"
        android:hint="@string/Add_Desc"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:hint = "@string/egTime"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/Dur"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/Day"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>